home - 홈 탭 ui 구성 및 데이터 보여주기 - 홈 탭 이미지뷰 코너 설정 - 상품 상세보기 뷰페이저 적용 - 상품 및 유저 정보 보여주기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jw.cloneappcarrot">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".global.GlobalApplication"
         android:allowBackup="false"
@@ -10,6 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CloneAppCarrot">
+
+        <activity
+            android:name=".feature.product.ProductActivity"
+            android:exported="false" /> <!-- 상품 보기 화면 -->
         <activity
             android:name=".feature.splash.StartActivity"
             android:exported="true">
@@ -21,7 +25,7 @@
         </activity> <!-- 스플래시 화면 -->
         <activity
             android:name=".feature.main.MainActivity"
-            android:exported="true" /> <!-- 메인화면 -->
+            android:exported="true" />
     </application>
 
 </manifest>
