--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,16 @@ dependencies {
     // When using Kotlin.
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
+    // ViewPager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    // ViewPager Indicator
+    implementation 'com.tbuonomo:dotsindicator:4.2'
 
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
