--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jw.cloneappcarrot">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".global.GlobalApplication"
         android:allowBackup="false"
@@ -10,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CloneAppCarrot">
-
+        <activity
+            android:name=".feature.main.CommonActionBar"
+            android:exported="false" />
         <activity
             android:name=".feature.product.ProductActivity"
             android:exported="false" /> <!-- 상품 보기 화면 -->
