[add] 동네생활 타입 구분 추가, 타입 별 리스트 화면 기본 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CloneAppCarrot">
         <activity
+            android:name=".feature.tab_neighbor.neighbor_type.NeighborTypeActivity"
+            android:exported="false" />
+        <activity
             android:name=".feature.main.CommonActionBar"
             android:exported="false" />
         <activity
